syntax = "proto3";

option java_multiple_files = true;
option java_package = "ru.matklad.proto";

package editor;

service Editor {
    rpc event (InputEvent) returns (EventReply) {
    }
    rpc updates (ViewStateRequest) returns (stream ViewStateReply) {
    }
}

message InputEvent {
    message Ready {
    }

    message MoveCursor {
        Direction direction = 1;
        Amount amount = 2;
    }

    message InsertText {
        string text = 1;
    }

    message OpenFile {
        string path = 1;
    }

    oneof kind {
        Ready ready = 1;
        MoveCursor move_cursor = 2;
        InsertText insert_text = 3;
        OpenFile open_file = 4;
    }
}

message EventReply {
}

enum Direction {
    UP = 0;
    RIGHT = 1;
    DOWN = 2;
    LEFT = 3;
}

enum Amount {
    CHAR = 0;
    PAGE = 1;
}


message ViewStateRequest {
}

message ViewStateReply {
    repeated Line lines = 1;
    int32 cursorX = 2;
    int32 cursorY = 3;
    string syntax_tree = 4;
}

message Line {
    repeated StyledText ranges = 1;
}

message StyledText {
    string text = 1;
    string style = 2;
}
